--- a/src/component/Course/Course.scss
+++ b/src/component/Course/Course.scss
@@ -6,6 +6,7 @@
     padding: 32px;
     cursor: pointer;
     margin-bottom: 32px;
+    height: calc(100% - 32px);
     @media (max-width: 575px) {
         padding: 16px;
     }
@@ -33,6 +34,7 @@
         }
         img {
             width: 60%;
+            border-radius: 12px;
             @media (max-width: 575px) {
                 width: 100%;
             }
@@ -108,11 +110,25 @@
                 opacity: 0;
                 transition: 0.2s;
                 transition-delay: 0.2s;
+                @media (max-width: 767px) {
+                    display: none;
+                }
             }
         }
     }
 }
 .modal {
+    .modal-close {
+        font-size: 30px;
+        font-weight: 400;
+        text-align: right;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        color: #12568c;
+        transform: scaleX(1.2);
+        cursor: pointer;
+    }
     .modal-header {
         padding: 0 0 20px;
         margin-bottom: 20px;
@@ -237,6 +253,7 @@
             color: #ffffffba;
             margin-left: 13px;
             font-size: 14px;
+            width: 70px;
         }
     }
     &-body {
