--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,3 +11,4 @@
 @import "../component/Project/Project";
 @import "../component/Student/Student";
 @import "../component/Teacher/Teacher";
+@import "../component/Register/Register";
