--- a/src/component/Intro/Intro.scss
+++ b/src/component/Intro/Intro.scss
@@ -89,6 +89,9 @@
             font-size: 12px;
             padding: 12px 12px;
         }
+        .c-button-1.secondary {
+            padding: 9px 12px;
+        }
     }
 }
 @keyframes moveItem {
