--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,3 +12,4 @@
 @import "../component/Student/Student";
 @import "../component/Teacher/Teacher";
 @import "../component/Register/Register";
+@import "../component/Footer/Footer";
