--- a/src/component/Course/Course.scss
+++ b/src/component/Course/Course.scss
@@ -63,6 +63,7 @@
             }
         }
     }
+
     &-title {
         @include flexbox(center, space-between);
         gap: 20px;
@@ -176,7 +177,7 @@
         .modal-info {
             @include flexbox(center, space-between);
             text-align: center;
-            margin: -28px 0 30px;
+            margin: -28px 0 12px;
             span {
                 display: block;
                 &:first-child {
@@ -186,6 +187,20 @@
                 &:last-child {
                     font-weight: 600;
                 }
+            }
+        }
+        .modal-more {
+            text-align: center;
+            margin-bottom: 12px;
+            p {
+                font-weight: 300;
+                font-size: 13px;
+                &:last-child {
+                    font-style: italic;
+                }
+            }
+            span {
+                font-weight: 500;
             }
         }
         .modal-register {
