--- a/src/component/Headline/Headline.scss
+++ b/src/component/Headline/Headline.scss
@@ -20,7 +20,7 @@
         font-weight: 700;
         margin: 20px 0;
         @media (max-width: 991px) {
-            font-size: 32px;
+            font-size: 32px !important;
         }
         span {
             background: $primary-gradient;
