--- a/src/component/Project/Project.scss
+++ b/src/component/Project/Project.scss
@@ -16,12 +16,16 @@
         margin-bottom: 24px;
         cursor: pointer;
         display: block;
-        // &::before {
-        //     @include before-after(100%, 100%, 0, 0);
-        //     background: #101cfd75;
-        // }
+        border: 1px solid #eeeeee36;
+        padding: 12px;
+        background-color: #151542;
+        border-radius: 12px;
+        overflow: hidden;
         @media (max-width: 767px) {
             margin-bottom: 12px;
+        }
+        img {
+            border-radius: 8px;
         }
         &:hover {
             &::before {
@@ -41,7 +45,8 @@
         }
         &-info {
             position: absolute;
-            bottom: 0;
+            top: 0;
+            left: 0;
             background: linear-gradient(180deg, rgba(6, 74, 251, 0) -14%, #010102 113.78%);
             width: 100%;
             height: 100%;
@@ -50,7 +55,7 @@
             padding: 20px;
             opacity: 0;
             transition: 0.2s;
-
+            border-radius: 8px;
             h3 {
                 font-size: 22px;
                 margin-bottom: 0;
@@ -84,6 +89,7 @@
         margin-top: 5px;
     }
     img {
+        border-radius: 8px;
         height: 250px;
         object-fit: cover;
         transition: 0.3s;
