--- a/src/component/Register/Register.scss
+++ b/src/component/Register/Register.scss
@@ -10,6 +10,9 @@
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(5, 75, 255, 0.2) 100%);
         box-shadow: 0px 0px 20px 0px rgba(5, 161, 255, 0.4);
         padding: 32px;
+        @media (max-width: 575px) {
+            padding: 16px;
+        }
     }
 
     &-left {
@@ -19,13 +22,10 @@
         background: linear-gradient(0deg, rgba(13, 67, 254, 0.04) 0%, rgba(13, 67, 254, 0.04) 100%), rgba(255, 255, 255, 0.04);
         position: relative;
         overflow: hidden;
-        // &:before {
-        //     @include before-after(150px, 150px, -40px, unset);
-        //     right: -40px;
-        //     opacity: 0.1;
-        //     border-radius: 50%;
-        //     background: $primary-gradient;
-        // }
+        @media (max-width: 991px) {
+            height: auto;
+            margin-bottom: 20px;
+        }
     }
     &-logo {
         position: absolute;
@@ -67,6 +67,9 @@
             svg {
                 margin-right: 4px;
             }
+            @media (max-width: 1400px) {
+                width: 100%;
+            }
             &:hover {
                 background-color: #1c234d;
             }
@@ -74,6 +77,9 @@
     }
     &-form {
         padding-left: 32px;
+        @media (max-width: 991px) {
+            padding-left: 0;
+        }
     }
     &-input-box {
         margin-bottom: 32px;
