--- a/src/component/Student/Student.scss
+++ b/src/component/Student/Student.scss
@@ -1,6 +1,9 @@
 .student {
     margin-top: 100px;
     position: relative;
+    @media (max-width: 991px) {
+        margin-top: 0px;
+    }
     &:before {
         content: "";
         position: absolute;
@@ -14,18 +17,7 @@
         background: radial-gradient(50% 50% at 50% 50%, rgba(0, 102, 255, 0.2) 0%, rgba(0, 64, 160, 0) 94.5%, rgba(0, 71, 255, 0.5) 100%);
     }
     &-list {
-        column-count: 3;
-        column-gap: 24px;
         position: relative;
-        &:hover {
-            .active {
-                opacity: 1 !important;
-                transform: scale(1.3);
-            }
-            .student-item {
-                opacity: 0.3;
-            }
-        }
     }
     &-item {
         margin-bottom: 24px;
@@ -35,8 +27,39 @@
         border: 2px solid #fff;
         transition: 0.3s;
         cursor: pointer;
-        img {
-            border-radius: 10px;
+        height: 250px;
+        @media (max-width: 991px) {
+            height: auto;
+            margin: 0;
         }
+        img {
+            height: 100%;
+            border-radius: 8px;
+        }
+    }
+    .headline {
+        margin-top: 60px;
+
+        @media (min-width: 992px) {
+            text-align: left;
+        }
+        &-title {
+            font-size: 44px;
+        }
+        &-desc {
+            width: 100%;
+        }
+    }
+}
+.vertical-slider .slick-list {
+    transform: rotate(180deg);
+}
+
+.vertical-slider .slick-slide {
+    transform: rotate(180deg);
+}
+.slick-slide > div {
+    @media (max-width: 991px) {
+        margin: 0 4px;
     }
 }
