--- a/src/component/Course/Course.scss
+++ b/src/component/Course/Course.scss
@@ -148,6 +148,9 @@
         box-shadow: 0px 0px 20px 0px rgba(5, 160, 255, 0.4);
         backdrop-filter: blur(27px);
         padding: 32px;
+        @media (max-width: 575px) {
+            padding: 16px;
+        }
         .headline-title {
             font-size: 28px;
         }
